[package]
name = "tcpjack"
version = "0.1.0"
authors = ["krishpranav <krisna.pranav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
structopt = "0.3.16"
pnet = "0.27"
env_logger = "0.8"
log = "0.4"
pktparse = "0.5"